--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello, World! Rabin</title>
+  <title>Hello, World!  Micro</title>
 </head>
 <body>
   <h1>Hello, World!</h1>
